--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import AsideMenu from '../components/AsideMenu.astro';
+
 interface Props {
 	title: string;
 }
@@ -17,9 +19,31 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+    <div id="app" class="relative h-screen p-2 gap-2">
+      <aside class="[grid-area:aside] flex-col flex overflow-y-auto]">
+        <AsideMenu/>
+      </aside>
+      <main class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto ">
+        MAIN
+      </main>
+      <footer class="[grid-area:player] min-h-[100px]">
+        
+      </footer>
+      <slot />
+    </div>
 	</body>
 </html>
+<style>
+  #app {
+    display: grid;
+    grid-template-areas: 
+      "aside main main"
+      "player player player"
+    ;
+    grid-template-colums: 350px 1fr;
+    grid-template-rows: 1fr auto;
+  }
+</style>
 <style is:global>
 	:root {
 		--accent: 136, 58, 234;
@@ -34,18 +58,6 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+		background: #000;
 	}
 </style>
