--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -1,7 +1,11 @@
 ---
-import SearchIcon from "../icons/SearchIcon.astro"
-import HomeIcon from "../icons/HomeIcon.astro"
+import SearchIcon from "@/icons/SearchIcon.astro"
+import HomeIcon from "@/icons/HomeIcon.astro"
 import SideMenuItem from './SideMenuItem.astro';
+import SideMenuCard from './SideMenuCard.astro';
+import LibraryIcon from "@/icons/LibraryIcon.astro";
+
+import { playlists } from "@/lib/data"
 ---
 <nav class="flex flex-col flex-1 gap-2">
   <div class=" bg-zinc-900 rounded-lg p-2">
@@ -16,6 +20,19 @@ import SideMenuItem from './SideMenuItem.astro';
       </SideMenuItem>
 
     </ul>
+  </div>
+  <div class=" bg-zinc-900 rounded-lg p-2 flex-1">
+    <ul>
+      <SideMenuItem href="/">
+        <LibraryIcon/>
+        Tu biblioteca
+      </SideMenuItem>
+      {
+        playlists.map((playlist)=> (
+          <SideMenuCard playlist={playlist}/>
+        ))
+      }
+      </ul>
   </div>
 </nav>
 
